--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,9 @@
 
 #background {
 	position: absolute;
-	background-color: black;
+	background-image: url("./sky.jpg");
+	background-size: cover;
+	background-position: top;
 	width: 100%;
 	height: 100%;
 	top: 0;
