--- a/css/style.css
+++ b/css/style.css
@@ -16,12 +16,12 @@
 
 #background {
 	position: absolute;
-	background-image: url("./sky.jpg");
+	background-image: url("../probe.png");
 	background-size: cover;
 	background-position: top;
 	width: 100%;
 	height: 100%;
-	top: 0;
+	top: -30%;
 	left: 0;
 	bottom: 0;
 	right: 0;
