--- a/css/style.css
+++ b/css/style.css
@@ -14,15 +14,35 @@
   overflow: hidden;
 }
 
-#background {
+#score {
+	font-size: 2vw;
+	font-family: Georgia;
+	color: #ccc;
+	background-color: black;
 	position: absolute;
-	width: 100%;
-	height: 100%;
-	top: -30%;
-	left: 0;
-	bottom: 0;
-	right: 0;
-  overflow: hidden;
+	width: 20%;
+	left: 2%;
+	top: 80%;
+  /*overflow: hidden;*/
+	text-align: center;
+	border-radius: 5px;
+	padding: 4px;
+	z-index: 40;
+}
+
+#health {
+	font-size: 2vw;
+	font-family: Georgia;
+	color: #ccc;
+	background-color: black;
+	font-weight: bold;
+  position: absolute;
+	width: 20%;
+	left: 2%;
+	text-align: center;
+	top: 60%;
+	padding: 4px;
+  z-index: 40;
 }
 
 #overlay {
